# eg-automation

./: .env.example  .gitignore  README.md  pyproject.toml
Core/Python/: pyproject.toml
Core/Python/edgraph/: auth.py  client.py  exceptions.py  models.py
Core/Python/eg_core/edgraph/: auth.py  client.py  config.py  filters.py  models.py
Core/claim_set_configurations/: district_only.json
Core/placeholders/: edgraph_placeholder_lea.json
ed_fi/: accessible_resources.py
ne_data_flow/: README.md  _claim_set.py  _constants.py  _edfi_resources.py  models.py  obfuscated_sync_to_esu.py  run.py  setup_esu.py  setup_tenant.py  sync_from_act.py  sync_from_sea.py
